Fix alignment in sidebar

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -42,6 +42,7 @@ body {
   flex-grow: 1;
   align-items: center;
   gap: 16px;
+  align-items: flex-start;
 }
 
 .text {
